without ingress
